test/org/midica/testfiles/failing/cond-undef-empty.midica
INCLUDE inc/instruments.midica

VAR $x = 1

{ if !
	0  c  /4
}
